--- a/src/main/vue/index.html
+++ b/src/main/vue/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>StarryLines</title>
   </head>
-  <body>
+  <body class="mx-0 sm:mx-12 md:mx-16 lg:mx-20">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
