--- a/src/main/vue/index.html
+++ b/src/main/vue/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StarryLines</title>
   </head>
-  <body class="mx-0 sm:mx-12 md:mx-16 lg:mx-20">
-    <div id="app"></div>
+  <body style="background-color: #232174">
+    <div id="app" class="!m-0"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
