--- a/src/main/vue/index.html
+++ b/src/main/vue/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StarryLines</title>
   </head>
-  <body style="background-color: #232174">
+  <body style="background-color: #0c173c">
     <div id="app" class="!m-0"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
