--- a/src/main/vue/index.html
+++ b/src/main/vue/index.html
@@ -2,11 +2,94 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FFC40C" />
+    <meta name="msapplication-TileColor" content="#224679" />
+    <meta name="theme-color" content="#0c173c" />
+
+    <meta
+      name="StarryLines"
+      content="StarryLines retrieves from GitHub the best repositories for each language and ranks them by the ratio between the star count and the number of lines of code."
+    />
     <title>StarryLines</title>
+    <meta
+      type="og:title"
+      content="StarryLines: Most starred lines of code on GitHub"
+    />
+    <meta type="og:type" content="website" />
+    <meta
+      type="og:description"
+      content="StarryLines retrieves from GitHub the best repositories for each language and ranks them by the ratio between the star count and the number of lines of code."
+    />
+    <meta type="og:url" content="https://starrylines.pablolec.dev" />
+    <meta
+      type="og:image"
+      content="https://starrylines.pablolec.dev/og-image.png"
+    />
   </head>
   <body class="bg-night-blue">
+    <h1 style="display: none">Most starred lines of code on GitHub</h1>
+    <h2 style="display: none">Top GitHub repositories for C by line of code</h2>
+    <h2 style="display: none">
+      Top GitHub repositories for C+ by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for C# by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Dart by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Go by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Java by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Javascript by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Kotlin by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for PHP by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Powershell by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Python by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Ruby by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Rust by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Scala by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Shell by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Bash by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Swift by line of code
+    </h2>
+    <h2 style="display: none">
+      Top GitHub repositories for Typescript by line of code
+    </h2>
+    <h3 style="display: none">
+      StarryLines retrieves from GitHub the best repositories for each language
+      and ranks them by the ratio between the star count and the number of lines
+      of code."
+    </h3>
     <div id="app" class="!m-0"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
