--- a/src/main/vue/index.html
+++ b/src/main/vue/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -10,24 +9,24 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FFC40C" />
     <meta name="msapplication-TileColor" content="#224679" />
     <meta name="theme-color" content="#0c173c" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="StarryLines"
+      name="description"
       content="StarryLines retrieves from GitHub the best repositories for each language and ranks them by the ratio between the star count and the number of lines of code."
     />
     <title>StarryLines</title>
     <meta
-      type="og:title"
+      property="og:title"
       content="StarryLines: Most starred lines of code on GitHub"
     />
-    <meta type="og:type" content="website" />
+    <meta property="og:type" content="website" />
     <meta
-      type="og:description"
+      property="og:description"
       content="StarryLines retrieves from GitHub the best repositories for each language and ranks them by the ratio between the star count and the number of lines of code."
     />
-    <meta type="og:url" content="https://starrylines.pablolec.dev" />
+    <meta property="og:url" content="https://starrylines.pablolec.dev" />
     <meta
-      type="og:image"
+      property="og:image"
       content="https://starrylines.pablolec.dev/og-image.png"
     />
   </head>
